week_04/TLS y Nginx Ingress/src/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask-container
        image: hashicorp/http-echo
        args:
          - "-text=Hello! This is my Flask App protected with TLS"
        ports:
        - containerPort: 5678
